Enhance reporting module and email templates for improved clarity and functionality
- Added a step to drop rows with missing 'Financial Instrument' in the `extract_bond_snapshot` function to ensure data integrity.
- Updated welcome email templates in English and Spanish to simplify the messaging by removing the company name, enhancing readability and user experience.
- Added a print statement in the `binaryXMLtoDF` function to output the length of the DataFrame for debugging purposes.

--- a/src/lib/email_templates/welcome_en.html
+++ b/src/lib/email_templates/welcome_en.html
@@ -67,17 +67,17 @@
             <img src="cid:logo" alt="AGM Logo">
         </div>
         <div class="content">
-            <h1>Welcome to AGM Technology (BVI) Inc.</h1>
+            <h1>Welcome to AGM</h1>
 
             <div class="section">
                 <p>Dear client,</p>
-                <p>Welcome to AGM Technology (BVI) Inc.!</p>
+                <p>Welcome to AGM</p>
                 <p>Now that your account <strong>{{ content.account_number }}</strong> has been approved and funded, you may find the following information helpful as you get started.</p>
             </div>
 
             <div class="section">
                 <h2>Trading Platforms</h2>
-                <p>AGM Technology (BVI) Inc. offers a number of powerful trading platforms to help you optimize your trading speed and efficiency.</p>
+                <p>AGM Technology offers a number of powerful trading platforms to help you optimize your trading speed and efficiency.</p>
                 <a href="https://www.agm.bvi/trading-platforms" class="button">Learn More About Our Trading Platforms</a>
             </div>
 
@@ -101,7 +101,6 @@
             <div class="section">
                 <p>We look forward to serving you.</p>
                 <p>AGM Customer Service</p>
-                <p>AGM Technology (BVI) Inc.</p>
             </div>
         </div>
     </div>
