--- a/src/lib/email_templates/welcome_es.html
+++ b/src/lib/email_templates/welcome_es.html
@@ -67,17 +67,17 @@
             <img src="cid:logo" alt="AGM Logo">
         </div>
         <div class="content">
-            <h1>Bienvenido a AGM Technology (BVI) Inc.</h1>
+            <h1>Bienvenido a AGM</h1>
 
             <div class="section">
                 <p>Estimado cliente,</p>
-                <p>¡Bienvenido a AGM Technology (BVI) Inc.!</p>
+                <p>¡Bienvenido a AGM!</p>
                 <p>Ahora que su cuenta <strong>{{ content.account_number }}</strong> ha sido aprobada y fondeada, puede que la siguiente información le sea útil para empezar.</p>
             </div>
 
             <div class="section">
                 <h2>Plataformas de trading</h2>
-                <p>AGM Technology (BVI) Inc. ofrece varias plataformas de trading potentes para ayudarle a optimizar la velocidad y eficiencia de sus operaciones.</p>
+                <p>AGM Technology ofrece varias plataformas de trading potentes para ayudarle a optimizar la velocidad y eficiencia de sus operaciones.</p>
                 <a href="https://www.agm.bvi/plataformas" class="button">Conozca nuestras plataformas de trading</a>
             </div>
 
@@ -101,7 +101,6 @@
             <div class="section">
                 <p>Esperamos poder servirle.</p>
                 <p>Servicio al Cliente de AGM</p>
-                <p>AGM Technology (BVI) Inc.</p>
             </div>
         </div>
     </div>
