Add trade request functionality and update API documentation
- Introduced a new `trade_request` module with endpoints for creating and reading trade requests.
- Updated `run.py` to register the new `trade_request` blueprint.
- Enhanced API documentation in `docs.html` to include new trade request endpoints.
- Added database model for trade requests in the Supabase connector.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -94,6 +94,8 @@
     <tr><td>/risk_profiles/list</td><td>GET</td><td></td></tr>
     <tr><td>/risk_profiles/read</td><td>GET</td><td></td></tr>
     <tr><td>/token</td><td>POST</td><td></td></tr>
+    <tr><td>/trade_request/create</td><td>POST</td><td></td></tr>
+    <tr><td>/trade_request/read</td><td>GET</td><td></td></tr>
     <tr><td>/trade_tickets/generate</td><td>POST</td><td></td></tr>
     <tr><td>/trade_tickets/list</td><td>GET</td><td></td></tr>
     <tr><td>/trade_tickets/read</td><td>GET</td><td></td></tr>
