--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -83,6 +83,7 @@
     <tr><td>/management_type_requests/create</td><td>POST</td><td></td></tr>
     <tr><td>/management_type_requests/read</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/clients</td><td>GET</td><td></td></tr>
+    <tr><td>/reporting/deposits_withdrawals</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/ibkr_account_details</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/ibkr_account_pending_tasks</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/nav</td><td>GET</td><td></td></tr>
