Remove daily ETL pipeline workflow and add business and occupation endpoint
- Deleted the ETL pipeline workflow from GitHub Actions to streamline CI/CD processes.
- Introduced a new endpoint `/ibkr/business_and_occupation` in the accounts module to fetch business and occupation data from the IBKR API.
- Updated the reporting module to include separate functions for running client and market data pipelines, enhancing modularity and clarity in data processing.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -23,6 +23,7 @@
     <tr><td>/accounts/documents</td><td>PATCH</td><td></td></tr>
     <tr><td>/accounts/documents</td><td>DELETE</td><td></td></tr>
     <tr><td>/accounts/ibkr/account_email</td><td>POST</td><td></td></tr>
+    <tr><td>/accounts/ibkr/business_and_occupation</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/ibkr/change_investment_experience</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/clp_capability</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/deposit</td><td>POST</td><td></td></tr>
