--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -91,7 +91,8 @@
     <tr><td>/reporting/open_positions</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/proposals_equity</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/rtd</td><td>GET</td><td></td></tr>
-    <tr><td>/reporting/run</td><td>GET</td><td></td></tr>
+    <tr><td>/reporting/run/clients</td><td>GET</td><td></td></tr>
+    <tr><td>/reporting/run/market_data</td><td>GET</td><td></td></tr>
     <tr><td>/risk_profiles/create</td><td>POST</td><td></td></tr>
     <tr><td>/risk_profiles/list</td><td>GET</td><td></td></tr>
     <tr><td>/risk_profiles/read</td><td>GET</td><td></td></tr>
