--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -78,6 +78,8 @@
     <tr><td>/fee_template_requests/create</td><td>POST</td><td></td></tr>
     <tr><td>/fee_template_requests/read</td><td>GET</td><td></td></tr>
     <tr><td>/fee_template_requests/update</td><td>POST</td><td></td></tr>
+    <tr><td>/flagged_deposits/create</td><td>POST</td><td></td></tr>
+    <tr><td>/flagged_deposits/read</td><td>GET</td><td></td></tr>
     <tr><td>/investment_proposals/create</td><td>POST</td><td></td></tr>
     <tr><td>/investment_proposals/read</td><td>GET</td><td></td></tr>
     <tr><td>/management_type_requests/create</td><td>POST</td><td></td></tr>
