Add important transfer instructions to email templates
- Included a new paragraph in English and Spanish email templates emphasizing the necessity of including the Payment Reference and account details for successful transfers.
- Enhanced existing templates with additional reminders about the custodial account and SIPC insurance for clarity and compliance.

--- a/src/lib/email_templates/transfer_instructions_en.html
+++ b/src/lib/email_templates/transfer_instructions_en.html
@@ -83,6 +83,7 @@
             </div>
 
             <div class="section">
+                <p><strong>IMPORTANT:</strong> Each transfer must include the Payment Reference / For Further Credit to: Your account number / Your name. Without this information, the transfer will not be credited.</p>
                 <p>Please provide the following instructions to your bank so that the transfer is executed as accurately as possible:</p>
             </div>
 
