--- a/src/lib/email_templates/transfer_instructions_es.html
+++ b/src/lib/email_templates/transfer_instructions_es.html
@@ -83,6 +83,7 @@
             </div>
 
             <div class="section">
+                <p><strong>IMPORTANTE:</strong> Toda transferencia debe de incluir la Referencia de Pago / For Further Credit to: Su número de Cuenta / Su nombre. Sin esta información la transferencia no va a ser acreditada.</p>
                 <p>Por favor entregue las siguientes instrucciones a su banco para que ejecute la transferencia con la mayor precisión:</p>
             </div>
 
