--- a/src/lib/email_templates/transfer_instructions_existing_en.html
+++ b/src/lib/email_templates/transfer_instructions_existing_en.html
@@ -81,6 +81,8 @@
             </div>
 
             <div class="section">
+                <p>Remember that the funds you send go directly to the custodian and remain there in a segregated account in your name with the respective SIPC (Securities Investor Protection Corporation) insurance. All statements and account reports are prepared by the custodian <strong>INTERACTIVE BROKERS LLC</strong>.</p>
+                <p><strong>IMPORTANT:</strong> Each transfer must include the Payment Reference / For Further Credit to: Your account number / Your name. Without this information, the transfer will not be credited.</p>
                 <p>Please provide the following instructions to your bank so that the transfer is executed as accurately as possible:</p>
             </div>
 
