--- a/src/lib/email_templates/transfer_instructions_existing_es.html
+++ b/src/lib/email_templates/transfer_instructions_existing_es.html
@@ -81,6 +81,8 @@
             </div>
 
             <div class="section">
+                <p>Recuerde que los fondos enviados llegan directamente al custodio y permanecen allí en una cuenta segregada a su nombre con los respectivos seguros del SIPC (Securities Investor Protection Corporation). Todos los reportes y estados de cuenta son confeccionados por el custodio INTERACTIVE BROKERS LLC.</p>
+                <p><strong>IMPORTANTE:</strong> Toda transferencia debe de incluir la Referencia de Pago / For Further Credit to: Su número de Cuenta / Su nombre. Sin esta información la transferencia no va a ser acreditada.</p>
                 <p>Por favor entregue las siguientes instrucciones a su banco para que ejecute la transferencia con la mayor precisión:</p>
             </div>
 
