Add accounts_not_funded reporting functionality
- Introduced a new endpoint `/accounts_not_funded` to retrieve accounts with zero NAV, enhancing reporting capabilities.
- Implemented the `get_accounts_not_funded` function to cross-reference NAV data with account information, identifying un-funded accounts.
- Updated documentation in `docs.html` to reflect the new endpoint.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -85,6 +85,7 @@
     <tr><td>/investment_proposals/read</td><td>GET</td><td></td></tr>
     <tr><td>/management_type_requests/create</td><td>POST</td><td></td></tr>
     <tr><td>/management_type_requests/read</td><td>GET</td><td></td></tr>
+    <tr><td>/reporting/accounts_not_funded</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/clients</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/deposits_withdrawals</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/ibkr_account_details</td><td>GET</td><td></td></tr>
