Add account statements functionality to IBKRWebAPI
- Introduced new endpoints `/ibkr/statements` (POST) and `/ibkr/statements/available` (GET) to retrieve account statements and available statements, respectively.
- Implemented corresponding functions in the `IBKRWebAPI` class to handle API requests for fetching statements.
- Updated documentation in `docs.html` to reflect the new endpoints.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -41,6 +41,8 @@
     <tr><td>/accounts/ibkr/sso/create</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/sso/initialize</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/sso/logout</td><td>POST</td><td></td></tr>
+    <tr><td>/accounts/ibkr/statements</td><td>POST</td><td></td></tr>
+    <tr><td>/accounts/ibkr/statements/available</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/ibkr/trading_permissions</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/transfer_position_externally</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/transfer_position_internally</td><td>POST</td><td></td></tr>
