Add trades reporting functionality
- Introduced a new endpoint `/reporting/trades` to retrieve trades information based on specified years and months.
- Implemented the `get_trades_report` function to extract and process trades data from Google Drive, including error handling and logging.
- Updated documentation in `docs.html` to reflect the new endpoint and its usage.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -72,6 +72,7 @@
     <tr><td>/email/send_email/application_link</td><td>POST</td><td></td></tr>
     <tr><td>/email/send_email/credentials</td><td>POST</td><td></td></tr>
     <tr><td>/email/send_email/email_confirmation</td><td>POST</td><td></td></tr>
+    <tr><td>/email/send_email/funding_notification</td><td>POST</td><td></td></tr>
     <tr><td>/email/send_email/lead_reminder</td><td>POST</td><td></td></tr>
     <tr><td>/email/send_email/task_reminder</td><td>POST</td><td></td></tr>
     <tr><td>/email/send_email/trade_ticket</td><td>POST</td><td></td></tr>
@@ -98,6 +99,7 @@
     <tr><td>/reporting/rtd</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/run/clients</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/run/market_data</td><td>GET</td><td></td></tr>
+    <tr><td>/reporting/trades</td><td>GET</td><td></td></tr>
     <tr><td>/risk_profiles/create</td><td>POST</td><td></td></tr>
     <tr><td>/risk_profiles/list</td><td>GET</td><td></td></tr>
     <tr><td>/risk_profiles/read</td><td>GET</td><td></td></tr>
